<resources>
    <string name="app_name">AndroidBasic2</string>
    <string name="go_button1_title">Go to Example1 Activity</string>
    <string name="go_button2_title">Go to Example2 Activity</string>
    <string name="go_button3_title">Go to Example3 Activity</string>
    <string name="go_button4_title">Go to Example4 Activity</string>
    <string name="go_button5_title">Go to Example5 Activity</string>
    <string name="this_is_example1activity">this is Example1Activity</string>
    <string name="textview">TextView</string>
    <string name="buttonCheck">buttonCheck</string>
</resources>
