<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="282dp"
        android:layout_height="590dp"
        android:orientation="vertical"
        android:padding="10sp"
        android:paddingLeft="35sp"
        android:paddingRight="35sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="83dp">

        <Button
            android:id="@+id/go_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35sp"
            android:layout_marginBottom="10sp"
            android:padding="25sp"
            android:text="@string/go_button1_title" />

        <Button
            android:id="@+id/go_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35sp"
            android:layout_marginBottom="10sp"
            android:padding="25sp"
            android:text="@string/go_button2_title" />

        <Button
            android:id="@+id/go_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35sp"
            android:layout_marginBottom="10sp"
            android:padding="25sp"
            android:text="@string/go_button3_title" />

        <Button
            android:id="@+id/go_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35sp"
            android:layout_marginBottom="10sp"
            android:padding="25sp"
            android:text="@string/go_button4_title" />

        <Button
            android:id="@+id/go_button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35sp"
            android:layout_marginBottom="10sp"
            android:padding="25sp"
            android:text="@string/go_button5_title" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>